@@ -86,6 +86,7 @@ $SHOW_GEDCOM_RECORD = true;				// -- a true value will provide a link on detail 
 										// --allow people to view the actual lines from the gedcom file
 $ALLOW_EDIT_GEDCOM = true;				//-- allow users with canEdit privileges to edit the gedcom
 $SYNC_GEDCOM_FILE = true;				//-- synchronize the gedcom file with online edits.  when set to false no changes will be written to the gedcom file
+$ENABLE_AUTOCOMPLETE = true;			//-- Enable Autocomplete for certain input fields
 $POSTAL_CODE = true;		//-- allow users to choose where to print the postal code. True is after the city name, false is before the city name
 $SUBLIST_TRIGGER_I = "200";				// -- Number of names required before Individual lists start sub-listing by first name
 										// -- Set to zero to disable sub-lists
